--- a/helloworld/index.html
+++ b/helloworld/index.html
@@ -1,3 +1,4 @@
+
 <head> 
     <link rel ="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -6,28 +7,37 @@
 </head>
 
 <body>
-    <h1> Hello world! </h1>
-    <div id ="main">
+    <!-- <h1> Hello world! </h1> -->
+    <h1> Lab 3 maps! </h1>
+
+    <h2> Section 1 - point data - United States capital cities </h2>
+    <!-- <div id ="main">
         <p id = "truth" > insert truth </p>
         <p id = "lie" > insert lie </p>
-    </div>
+    </div> -->
     
 
-    <div id = "myDiv" > </div>
+    <!-- <div id = "myDiv" > </div>
 
     <div id="mappy"></div>
 
-    <div id="mappy2"></div>
+    <div id="mappy2"></div> -->
+
+    <div id ="mappy1_lab3"></div>
+
+    <h2> Section 2 - choropleth data - tbd </h2>
+
+    <div id = "mappy2_lab3"></div>
 
    
 </body>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" 
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""> // leaflet --> in scripts.js
+     crossorigin=""> // leaflet: in scripts.js
     </script> 
 
-<script src = "js/scripts.js"> // this uses the script in scripts.js - same as below
+<!-- <script src = "js/scripts.js"> // this uses the script in scripts.js - same as below
 
 </script>
 
@@ -47,7 +57,10 @@
     });
 </script>
 
-<script src = "js/scripts2.js" defer></script> 
+<script src = "js/scripts2.js" defer></script>   -->
+
+<script src = "js/scripts_lab3.js" defer></script> 
+
 
 
 
