--- a/helloworld/index.html
+++ b/helloworld/index.html
@@ -10,7 +10,9 @@
     <!-- <h1> Hello world! </h1> -->
     <h1> Lab 3 maps! </h1>
 
-    <h2> Section 1 - point data - United States capital cities </h2>
+    <h2> Section 1: point data </h2>
+
+    <h3> United States capital cities sized by 2023 population </h3>
     <!-- <div id ="main">
         <p id = "truth" > insert truth </p>
         <p id = "lie" > insert lie </p>
@@ -25,9 +27,15 @@
 
     <div id ="mappy1_lab3"></div>
 
-    <h2> Section 2 - choropleth data - tbd </h2>
+    <p>Data from the <a href="https://www.census.gov/data/tables/time-series/demo/popest/2020s-state-total.html">US Census</a></p>
+
+    <h2> Section 2: choropleth data </h2>
+
+    <h3> United States state populations 2023 </h3>
 
     <div id = "mappy2_lab3"></div>
+
+    <p> Data from the <a href ="https://www.census.gov/geographies/mapping-files/2020/geo/tiger-line-file.html">US Census TIGER/Line Shapefiles</a></p>
 
    
 </body>
@@ -60,6 +68,8 @@
 <script src = "js/scripts2.js" defer></script>   -->
 
 <script src = "js/scripts_lab3.js" defer></script> 
+
+
 
 
 
