--- a/helloworld/index.html
+++ b/helloworld/index.html
@@ -31,7 +31,7 @@
 
     <h2> Section 2: choropleth data </h2>
 
-    <h3> United States state populations 2023 </h3>
+    <h3> United States water-to-land area ratios </h3>
 
     <div id = "mappy2_lab3"></div>
 
